# notification_service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/domain/entities/: user.py
app/domain/exceptions/: base.py  user.py
app/domain/user/: entities.py  exceptions.py  service.py
app/domain/user/interfaces/: base_repository.py
app/domain/user/value_objects/: __init__.py  email.py  phone.py  telegram.py  username.py
app/domain/value_objects/: user.py
app/infrastructure/database/converters/: user.py
app/infrastructure/database/repositories/user/: memory.py  mongo.py
app/infrastructure/integrations/notifications/clients/: base.py
app/infrastructure/repositories/: converters.py
app/infrastructure/repositories/base/: mongo.py
app/infrastructure/repositories/user/: base.py  memory.py  mongo.py
app/infrastructure/task_queues/: base.py  celery.py  celery_adapter.py  celery_app.py  celery_tasks.py  memory.py
app/logic/: init.py  mediator.py
app/logic/commands/: user.py
app/logic/exceptions/: base.py  mediator.py  user.py
app/logic/services/: notification.py  user.py
app/logic/use_cases/: base.py  user.py
app/presentation/api/: __init__.py  main.py  schemas.py
app/presentation/api/user/: handlers.py
app/presentation/api/v1/: __init__.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/domain/value_objects/: test_user.py
app/tests/logic/: test_user.py
app/tests/presentation/api/: conftest.py  test_user.py
docker_compose/: app.yaml  storages.yaml  task_queue.yaml
(+2 files in other folders)
